<resources>
    <string name="app_name">HiltExample</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="my_list">My List</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hilt_app">Hilt App</string>
    <string name="splash_fragment_label">Splash</string>
    <string name="main_fragment_label">Main</string>
    <string name="viewpager_fragment_label">Viewpager</string>
    <string name="workmanager_fragment_label">WorkManager</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="system_theme">System Theme</string>
    <string name="themes">Themes</string>
    <string name="hindi">हिंदी</string>
    <string name="english">English</string>
    <string name="french">French</string>

    <!--Locale Example-->
    <string name="translations">Translations</string>
    <string name="videos">Videos</string>
    <string name="localization">Localization</string>
    <string name="posts">Posts</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="fullscreen_dialog">FullScreen Dialog</string>
    <string name="dialogs">Dialogs</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="animation">Animation</string>
    <string name="audio">Audio</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="camera">Camera</string>
    <string name="coroutines">Coroutines</string>
    <string name="dialog">Dialog</string>
    <string name="network_api">Network Api</string>
    <string name="network_connectivity">Network connectivity</string>
    <string name="viewpager">ViewPager</string>
    <string name="workmanager">WorkManager</string>
    <string name="main">Main</string>
    <string name="bottomsheet_dialog">BottomSheet dialog</string>
    <string name="multiline_content">Multiline Content</string>
    <string name="notification_title">Notification Title</string>
</resources>