<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/LocalizationFragment"
        android:enabled="true"
        android:icon="@drawable/menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/VideoFragment"
        android:enabled="true"
        android:icon="@drawable/menu_discovery"
        android:title="@string/videos" />
    <item
        android:id="@+id/MainFragment"
        android:enabled="true"
        android:icon="@drawable/menu_bookmark"
        android:title="@string/my_list" />
    <item
        android:id="@+id/DialogTestFragment"
        android:enabled="true"
        android:icon="@drawable/menu_download"
        android:title="@string/download" />
    <item
        android:id="@+id/NetworkApiFragment"
        android:enabled="true"
        android:icon="@drawable/menu_profile"
        android:title="@string/posts" />
</menu>